--- a/package.json
+++ b/package.json
@@ -16,26 +16,27 @@
   "license": "ISC",
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^6.5.1",
-    "html-loader": "^3.0.1",
+    "css-loader": "^6.6.0",
+    "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.4.5",
+    "mini-css-extract-plugin": "^2.5.3",
     "node-sass": "^6.0.1",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
-    "postcss": "^8.4.6",
+    "postcss": "^8.4.7",
     "postcss-cli": "^9.1.0",
     "postcss-sorting": "^7.0.1",
-    "sass": "^1.44.0",
-    "sass-loader": "^12.3.0",
-    "server": "^1.0.36",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
+    "server": "^1.0.37",
     "style-loader": "^3.3.1",
-    "webpack": "^5.64.4",
-    "webpack-cli": "^4.9.1",
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2",
     "webpack-dev": "^1.1.1",
-    "webpack-dev-server": "^4.6.0",
+    "webpack-dev-server": "^4.7.4",
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "ajv": "^8.10.0",
     "postcss-scss": "^4.0.3"
   }
 }
